--- a/index.html
+++ b/index.html
@@ -282,7 +282,9 @@
     <footer id="footer">
         <div class="footer-container">
             <div class="upper-div">
-                <img class="logo" src="./images/logo.svg" alt="logo">
+                <a href="./index.html">
+                    <img src="./images/logo.svg" alt="logo" class="logo" />
+                </a>
                 <div class="contact-box">
                     <p class="number">
                         +995 558 943 886
