corrections: a:hover, html main text div

--- a/index.html
+++ b/index.html
@@ -53,12 +53,16 @@
     </header>
     <main>
         <div class="hero-section">
-            <h1 class="name">
-                Hi 👋,<br>
-                My name is <br>
-                <span>Goga Bagauri </span> <br>
-                I build things for the web and bring creative ideas to life.
-            </h1>
+            <div class="text-box">
+                <h1 class="name">
+                    Hi 👋,<br>
+                    My name is <br>
+                    <span>Goga Bagauri </span> <br>
+                </h1>
+                <p>
+                    I build things for the web and bring creative ideas to life.
+                </p>
+            </div>
             <div class="img-div">
                 <div class="img"></div>
                 <!-- <img src="./images/image-profile.jpg" alt="image-profile"> -->
